----------------------------------------------------------------------
 OmegaT 4.1.2 update 2 
----------------------------------------------------------------------
  1 Enhancement
  1 Bug fix
  0 Localisation update
----------------------------------------------------------------------
4.1.2 update 2 vs 4.1.2 update 1

  Implemented requests:

  - Commit source files
  https://sourceforge.net/p/omegat/feature-requests/1329/

  Bug fixes:

  - segmentation.conf and filters.xml not mirrored in team projects
  https://sourceforge.net/p/omegat/bugs/864/

----------------------------------------------------------------------
 OmegaT 4.1.2 update 1 (2017-08-09)
----------------------------------------------------------------------
  4 Enhancements
  2 Bug fixes
  1 Localisation update
----------------------------------------------------------------------
4.1.2 update 1 vs 4.1.2

  Implemented requests:

  - Garbage-collect git-based projects
  https://sourceforge.net/p/omegat/feature-requests/1029/

  - Do not load fake PO fuzzies when real ones exist
  https://sourceforge.net/p/omegat/feature-requests/1323/

  Other changes:

  - Move First and Move Last buttons were added to the segmentation
dialog to move quickly the selected rule to the first or last position
in the table

  - New Reset Options feature in the Search window menu

  Bug fixes:

  - An error occurred when a PO file was used in /tm/auto

  - Repository mapping lost when downloading team project
  https://sourceforge.net/p/omegat/bugs/859/

  Localisation Updates:

  - Italian localisation updated to 4.1.2 (UI)

----------------------------------------------------------------------
 OmegaT 4.1.2 (2017-06-22)
----------------------------------------------------------------------
 12 Enhancements
  7 Bug fixes
  2 Localisation updates
----------------------------------------------------------------------
4.1.2 vs 4.1.1

  Implemented requests:
